# pmw

./: LICENSE
backend-fastapi/: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend-fastapi/app/: __main__.py  main.py  settings.py  test_apis.py
backend-fastapi/app/api/: __init__.py  appointments.py  auth.py  communications.py  home.py  job_application copy.py  job_application.py  jobs copy.py  jobs.py  placement_application.py  placement_declaration.py  placement_reports.py  placement_visit.py  users.py
backend-fastapi/app/api/models/: action_status.py  appointment copy.py  appointment.py  auth.py  coordinate.py  job.py  job_application copy.py  job_application.py  placement_application copy.py  placement_application.py  placement_report.py  placement_students.py  placement_tutor.py  placement_visit.py  response.py  route_plan copy.py  route_plan.py  tutor.py  user.py
backend-fastapi/app/api/routers/: __init__.py  appointments.py  auth.py  communications.py  home.py  job_application.py  jobs.py  users.py  (+6 more)
backend-fastapi/app/middleware/: __init__.py  logging.py
backend-fastapi/app/pnp_helpers/: auth.py  client_response.py  json_response_wrapper.py  user.py
backend-fastapi/app/utils/: auth.py  exceptions.py  region_mapper.py  reponse.py  route_planner copy 2.py  route_planner copy 3.py  route_planner copy 4.py  route_planner copy.py  route_planner.py
backend-fastapi/prisma/: schema.prisma
backend-fastapi/tests/: helpers.py
backend-fastapi/tests/performance/: locust_test.py
(+304 files in other folders)
