[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = "API server for the PMW project"
authors = ["Charly Jose <charly@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
prisma = "^0.8.1"
passlib = "1.7.4"
bcrypt = "4.0.1"
python-jose = "3.3.0"
email-validator = "1.3.1"
python-multipart = "0.0.6"
bson = "0.5.10"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^3.0.4"
pyright = "^1.1.294"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 140
skip-string-normalization = true
skip-magic-trailing-comma = true
exclude = "(venv|.tox|.eggs|.mypy_cache|.pytest_cache|.cache|.idea|.vscode|.git|build|dist|openapi_gen)"

[tool.isort]
profile = "black"
line_length = 140 
skip_glob = ["*proto/*", "*gen/*"]
